--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --optimization",
+    "build": "ng build --prod --optimization- -output-path docs --base-href /verification/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "browser": { "fs": false, "path": false, "os": false, "net": false, "tls": false },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "net": false,
+    "tls": false
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.1",
