--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verification",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -36,6 +36,7 @@
     "@angular-devkit/build-angular": "~0.1102.1",
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@types/node-forge": "^0.9.7",
